fixing z-index

--- a/letrilizar.css
+++ b/letrilizar.css
@@ -1,7 +1,3 @@
-.letrilizar {
-    /*border: 3px dashed #e73e2c;*/
-}
-
 
 .letrilizar,
 .letrilizar-text-wrapper--closest,
@@ -36,6 +32,7 @@
     padding: 10px 13px;
     font-size: 11px;
     font-family: 'ProximaNova', 'Montserrat', sans-serif;
+    z-index: 5000;
 }
 
 .letrilizar-download-button,
